--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "express": "^4.18.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -25,10 +32,6 @@
     "env": {
       "node": true
     },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
